1.0.1
=====
 * Fixed crash when using the Device menu without a selected device.
 * Fixed DVD copy when reading from a DVD+RW.
 * Fixed --without-alsa configure check
 * Fixed a crash in Video DVD ripping when the title does not contain an audio stream
	
1.0
===
 * K3b now includes a VideoDVD kio slave. It can be used in Konqueror through the protocol videodvd:/
   to copy the files from a VideoDVD with on-the-fly decryption if libdvdcss is installed.
   (Be aware that in some countries it is not permitted to use libdvdcss.)
 * New Device menu containing all the actions possible for a device (like eject, unmount, ...).
   This includes the possibility of assigning shortcuts to these kind of actions.
 * K3b now warns if user parameters for external programs have been specified. This has been introduced
   because there were some bug report that were caused by faulty user parameters.
 * Cleaned up all the job classes: No job creates a widget anymore. This allows for non-GUI usage of libk3b.
   For example in a kioslave.
 * New option in the data project to not cache the inodes. That means it is possible to have multiple
   actual copies of the same file on one CD/DVD.
 * K3b now tries to disable stuff that might influence the burning process. This includes the KDED module
   mediamanager, SuSEPlugger, and automounting (currently supported: subfs, supermount).
 * New Audio Track source editor dialog to cut audio track sources at the beginning and the end.
 * Splitted "read retries" and "ignore read errors" for data and audio sectors in cd copy and set new
   defaults for audio sectors which make more sense: 5 retires and skip unreadable sectors.
 * New Mediamanager which makes K3b always know which device contains which medium. This makes medium handling 
   more smooth and the user now selects a medium instead of a device.
   Other advantages:
    - No waiting time anymore when asking for information on media (including for example Audio CD ripping).